--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,16 @@ after_success:
   - docker push eeps30/multi-nginx
   - docker push eeps30/multi-server
   - docker push eeps30/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-west-2-271251179226
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
